--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://grayson-choi.github.io/advent_calendar/">
+  <meta property="og:url" content="https://omia2022.github.io/calendar/">
   <meta property="og:title" content="🎄크리스마스 디데이 캘린더🎄">
   <meta property="og:image" content="image/OGimage.png">
   <meta property="og:description" content="영화와 함께 기다리는 크리스마스!">
