--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
 
-  <title>Sparta Advend Calendar 2023</title>
+  <title>🎄크리스마스 디데이 캘린더🎄</title>
   <link rel="stylesheet" href="index.css">
   <link rel="stylesheet" href="snow.css">
   <link rel="stylesheet" href="share.css">
